--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rawchat",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "src/index.js",
   "scripts": {
-    "run": "node bot.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
