--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node src/index.js",
     "prepare": "husky",
     "precommit": "eslint .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.4.2",
     "prettier": "^3.4.2"
   }
